ShowImage: fix saving

As investigated and suggested by jackburton in ticket #14693:
outTranslator wasn't initialized correctly (due to type mismatch
on 64 bit platform).

Also set the image's file name as default in the save dialog.

Fixes #14693

Change-Id: I741e3616b935315a707ea3949a330d41d577fd91